# Mobile-Games-Builder

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/game_builder_agent/: __init__.py  clarifier.py  cli.py  config.py  executor.py  feedback.py  io.py  llm_client.py  orchestrator.py  planner.py  presenter.py  prompts.py  schemas.py
src/game_builder_agent/web/: __init__.py  server.py  sessions.py
src/game_builder_agent/web/static/: app.js  styles.css
src/game_builder_agent/web/templates/: index.html
tests/: test_clarifier.py  test_e2e.py  test_executor.py  test_planner.py  test_web.py
